--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://twitter.com/dnedigital">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
