--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">DNE Digital</h1>
               <p class="intro-text">
-                Gives us our daily fuel,<br>
-                And forgive us our non hodlers,<br>
-                As we forgive those who hodl against us,<br>
-                And lead us not into space,<br>
-                But deliver us to the moon,<br>
-                Amen.</p>
+                Interested in investing in Cryptocurrencies but not sure where to start? Let one of our qualified professionals help you get started today.
+              </p>
                 <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -228,7 +224,7 @@
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
+                <a href="http://twitter.com/dnedigital">
                   <i class="fa fa-twitter"></i>
                 </a>
               </li>
