--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
+    <!-- Add favicon to website -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
     <!-- Custom styles for this template -->
     <link href="css/dnedigital.min.css" rel="stylesheet">
 
@@ -27,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-          <img src="../img/dnelogo.png" alt="DNE Digital" height="56" width="44">
+          <img src="img/dnelogo.png" alt="DNE Digital" height="56" width="44">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -57,7 +61,7 @@
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">DNE Digital</h1>
               <p class="intro-text">
-                Interested in investing in Cryptocurrencies but not sure where to start? Let one of our qualified professionals help you get started today.
+                DNE provides research and consulting services to clients looking for unconventional and innovative opportunities.
               </p>
                 <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
@@ -131,7 +135,7 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/1/005/087/1ae/2714455.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/malc.jpg" alt="">
               <h4>Malcolm Navarro</h4>
               <p class="text-muted">Co-Founder</p>
               <ul class="list-inline social-buttons">
@@ -141,7 +145,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/malcolm-navarro-804706a2/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
@@ -150,7 +154,7 @@
           </div>
           <div class="col-sm-6">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAp9AAAAJGZlNGViYTdiLTA2OWYtNGRjYS05ZjY0LTVkMjg4OTI1NDk0ZQ.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/phil.jpg" alt="">
               <h4>Phil Mohun</h4>
               <p class="text-muted">Co-Founder</p>
               <ul class="list-inline social-buttons">
